--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/main_styles.css
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/main_styles.css
@@ -146,14 +146,14 @@ h1, h2, h3, h4, h5, h6
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
 }
-h1::selection, 
-h2::selection, 
-h3::selection, 
-h4::selection, 
-h5::selection, 
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
 h6::selection
 {
-	
+
 }
 ::-webkit-input-placeholder
 {
@@ -167,14 +167,14 @@ h6::selection
 	font-weight: 500 !important;
 	color: #a5a5a5 !important;
 }
-::-moz-placeholder /* Firefox 19+ */ 
+::-moz-placeholder /* Firefox 19+ */
 {
 	font-size: 14px !important;
 	font-weight: 500 !important;
 	color: #a5a5a5 !important;
-} 
+}
 :-ms-input-placeholder
-{ 
+{
 	font-size: 14px !important;
 	font-weight: 500 !important;
 	color: #a5a5a5 !important;
@@ -299,7 +299,7 @@ section
 	transition: all 200ms ease;
 }
 .header.scrolled
-{	
+{
 	top: 15px;
 }
 .header.scrolled .header_content::before
@@ -693,7 +693,7 @@ section
 }
 .hero_slide_content h1 span
 {
-	background: #ffb606;
+	background: #0D6837;
 	padding-left: 13px;
 	padding-right: 13px;
 	margin-left: -12px;
@@ -1411,7 +1411,7 @@ input:last-of-type
 15.2 Footer Content
 *********************************/
 
-.footer_content 
+.footer_content
 {
 	padding-top: 80px;
 	padding-bottom: 83px;
