--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/contact_styles.css
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/contact_styles.css
@@ -322,6 +322,9 @@ section
 	display: inline-block;
 	padding-left: 76px;
 }
+.logo img{
+	border-radius: 25px;
+}
 .logo span
 {
 	font-family: 'Open Sans', sans-serif;
