--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/courses_styles.css
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/courses_styles.css
@@ -324,6 +324,9 @@ section
 	display: inline-block;
 	padding-left: 76px;
 }
+.logo img{
+	border-radius: 25px;
+}
 .logo span
 {
 	font-family: 'Open Sans', sans-serif;
@@ -662,7 +665,7 @@ section
 	-ms-transform: translateX(-50%);
 	-o-transform: translateX(-50%);
 	transform: translateX(-50%);
-	
+
 	padding-top: 24px;
 	padding-bottom: 18px;
 	padding-left: 39px;
