--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Ventas/public_html/CSS/estilo.css
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Ventas/public_html/CSS/estilo.css
@@ -3,7 +3,7 @@ table{
   border-collapse: collapse;
 }
 table, td, th{
-  border: 2px solid blue;
+  border: 2px solid black;
 }
 
 td, th{
@@ -20,4 +20,8 @@ td{
 }
 tfoot td{
   text-align: center;
+}
+body{
+    background: skyblue;
+    -webkit-background-size: cover;
 }
