--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/contact_styles.css
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/styles/contact_styles.css
@@ -677,7 +677,7 @@ section
 {
 	font-size: 72px;
 	font-weight: 400;
-	color: #FFFFFF;
+	color: #737373;
 	line-height: 0.5;
 	white-space: nowrap;
 }
