--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/styles/contact_styles.css
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Proyecto_Topicos/styles/contact_styles.css
@@ -75,7 +75,7 @@ p
 	font-size: 14px;
 	line-height: 2.29;
 	font-weight: 400;
-	color: #a5a5a5;
+	color: black;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
