modificacion del Proyecto Integrador

--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Inicio.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Inicio.html
@@ -17,17 +17,17 @@
         </div>
 <center>
         <div class="formulario">
-
             <br><h2>Usuario</h2>
             <form action="#">
-                <p><input type="text" placeholder="Usuario" required></p>
+                <p><input type="text" placeholder="Usuario" required></p>     <!--ingresar datos del usuario-->
                 <p><input type="password" placeholder="Contraseña" required></p>
-                <button onclick="location.href='file:///C:/Users/jesus/Documents/GitHub/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Karen_Lop%C3%A9z/TopicosAvanzadosDeProgramacion/public_html/Registro.html'">Registrarse</button>
-                <button onclick="location.href='file:///C:/Users/jesus/Documents/GitHub/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Karen_Lop%C3%A9z/TopicosAvanzadosDeProgramacion/public_html/vista.html'">Entrar</button>
+				<button type="submit"><a href="Registro.html">Registrarse</a></button>
+                <button type="submit"><a href="vista.html">Entrar</a></button>
             </form>
         </div>
         <div class="reset-password">
-            <br><a href="file:///C:/Users/jesus/Documents/GitHub/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Karen_Lop%C3%A9z/TopicosAvanzadosDeProgramacion/public_html/Contrase%C3%B1a.html">¿Has olvidado tu usuario o contraseña?</a>
+      <!-- te manda a un apartado por -->
+            <br><a href="Contraseña.html">¿Has olvidado tu usuario o contraseña?</a>
         </div>
 
       </center>
