--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Registro.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Registro.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,30 +8,29 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/estilos.css">
     <body style="background-color: #00D3BC;">
-</body>
 </head>
-
-<body class="text-center">
+<body>
     <div class="contenedor-form">
         <div class="toggle">
         </div>
 <center>
-        <div class="formulario">
+<div class="formulario">
+    <br><h2>Nuevo usuario</h2>
+    <form action="#">
+     <!--ingresar los datos del usuario para su registro-->
+    <!--botones para su registro-->
+        <p><input type="text" placeholder="Usuario" required></p>
+        <p><input type="email" placeholder="Correo Electronico" required></p>
+        <p><input type="password" placeholder="Contraseña" required></p>
+        <p><input type="password" placeholder="Confirmar contraseña" required></p>
+				<button type="submit"><a href="Inicio.html">Registrarse</a></button>
+        <button type="submit"><a href="vista.html">Entrar</a></button>
+    </form>
+</div>
+</center>
 
-            <br><h2>Recuperar</h2>
-            <form action="#">
-                <p><input type="email" placeholder="Correo" required></p>
-                <p><input type="email" placeholder="Confirmar correo" required></p>
-                <input type="submit" value="Enviar">
-                <button onclick="location.href='file:///C:/Users/jesus/Documents/GitHub/TopicosAvanzados19A/TopicosAvanzados19A/public_html/Karen_Lop%C3%A9z/TopicosAvanzadosDeProgramacion/public_html/Inicio.html'">Regresar</button>
-            </form>
-        </div>
-
-
-      </center>
     </div>
     <script src="JS/jquery-3.1.1.min.js"></script>
     <script src="JS/main.js"></script>
-
 </body>
 </html>
