--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Gráfica de ventas.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Gráfica de ventas.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="jquery-1.12.0.min.js"></script>
-	<script type="text/javascript" src="dist/Chart.bundle.min.js"></script>
+        <script src="../../Librerías/dist/Chart.bundle.min.js" type="text/javascript"></script>
+        <script src="../../Librerías/jquery-1.12.0.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
 		var datos = {
