--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Ordenar.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Ordenar.html
@@ -11,26 +11,26 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="CSS/estilos.css">
+<style type="text/css">
     body {
-        color: #000000;    <!--color de la captura de datos-->
-		background: #00D3BC;    <!--del fondo de la pagina-->
+        color: #000000;    //<!--color de la captura de datos-->
+		background: #00D3BC;    //<!--del fondo de la pagina-->
 		font-family: 'Varela Round', sans-serif;
-		font-size: 13px;    <!--tamaño de las letras de la cabeza-->
+		font-size: 13px;    //<!--tamaño de las letras de la cabeza-->
 	}
 	.table-wrapper {
         background: #fff;
-        padding: 20px 25px; <!--Tamaño del titulo la tabla-->
+        padding: 20px 25px; //<!--Tamaño del titulo la tabla-->
         margin: 30px 0;
 		border-radius: 3px;
         box-shadow: 0 1px 1px rgba(0,0,0,.05);
     }
-	.table-title {       <!--tamaño del cuadro princiapal-->
+	.table-title {       //<!--tamaño del cuadro princiapal-->
 		padding-bottom: 15px;
 		background: #00D3BC;
-		color: #fff;  <!--color del titulo del cuadro-->
+		color: #fff;  //<!--color del titulo del cuadro-->
 		padding: 160px 30px;
-		margin: -20px -25px 10px;  <!--ancho del cuadro-->
+		margin: -20px -25px 10px;  //<!--ancho del cuadro-->
 		border-radius: 3px 3px 0 0;
     }
     .table-title h2 {
@@ -40,7 +40,7 @@
 	.table-title .btn-group {
 		float: right;
 	}
-	.table-title .btn {   <!--tamaño del cuadro de agregar y eliminar-->
+	.table-title .btn {   //<!--tamaño del cuadro de agregar y eliminar-->
 		color: #fff;
 		float: right;
 		font-size: 13px;
@@ -52,15 +52,15 @@
 		margin-left: 10px;
 	}
 	.table-title .btn i {
-		float: left;      <!--´posicion de los - + -->
-		font-size: 0px;   <!--tamaño del + --->
+		float: left;      //<!--´posicion de los - + -->
+		font-size: 0px;   //<!--tamaño del + --->
 		margin-right: 5px;
 	}
 	.table-title .btn span {
 		float: left;
 		margin-top: 2px;
 	}
-    table.table tr th, table.table tr td {    <!--espacio entre los productos-->
+    table.table tr th, table.table tr td {    //<!-- espacio entre los productos-->
         border-color: #e9e9e9;
 		padding: 12px 15px;
 		vertical-align: middle;
@@ -268,8 +268,8 @@ $(document).ready(function(){
 						<h2>Ordenar compra</h2>   <!--subtitulo de la pagina-->
 					</div>
 					<div class="col-sm-6">
-						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Enviar</span></a>   <!--botones de eliminar y agregar-->
-						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Cancelar</span></a>
+						<a href="vista.html" class="btn btn-success" ><i class="material-icons">&#xE147;</i> <span>Enviar</span></a>   <!--botones de eliminar y agregar-->
+						<a href="vista.html" class="btn btn-danger" ><i class="material-icons">&#xE15C;</i> <span>Cancelar</span></a>
 					</div>
                 </div>
             </div>
@@ -395,4 +395,3 @@ $(document).ready(function(){
     </div>
 </body>
 </html>
-
