--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/MVC/Views/Inventario.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/MVC/Views/Inventario.html
@@ -5,6 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Crud</title> <!--Titulo de la pagina-->
+<script type="text/javascript" src="jspdf.min.js"></script>
+  <script src="PDF.js" charset="utf-8"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!--librerias-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,24 +15,24 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style type="text/css">
     body {
-        color: #000000;    <!--color de la captura de datos-->
-		background: #00D3BC;    <!--del fondo de la pagina-->
+        color: #000000;    <!-- color de la captura de datos-->
+		background: #00D3BC;    <!-- del fondo de la pagina-->
 		font-family: 'Varela Round', sans-serif;
-		font-size: 13px;    <!--tamaño de las letras de la cabeza-->
+		font-size: 13px;   <!-- tamaño de las letras de la cabeza-->
 	}
 	.table-wrapper {
         background: #fff;
-        padding: 20px 25px; <!--Tamaño del titulo la tabla-->
+        padding: 20px 25px; <!-- Tamaño del titulo la tabla-->
         margin: 30px 0;
 		border-radius: 3px;
         box-shadow: 0 1px 1px rgba(0,0,0,.05);
     }
-	.table-title {       <!--tamaño del cuadro princiapal-->
+	.table-title {       <!-- tamaño del cuadro princiapal-->
 		padding-bottom: 15px;
 		background: #00D3BC;
-		color: #fff;  <!--color del titulo del cuadro-->
+		color: #fff;  <!-- color del titulo del cuadro-->
 		padding: 160px 30px;
-		margin: -20px -25px 10px;  <!--ancho del cuadro-->
+		margin: -20px -25px 10px;  <!-- ancho del cuadro-->
 		border-radius: 3px 3px 0 0;
     }
     .table-title h2 {
@@ -40,7 +42,7 @@
 	.table-title .btn-group {
 		float: right;
 	}
-	.table-title .btn {   <!--tamaño del cuadro de agregar y eliminar-->
+	.table-title .btn {   <!-- tamaño del cuadro de agregar y eliminar-->
 		color: #fff;
 		float: right;
 		font-size: 13px;
@@ -51,7 +53,7 @@
 		outline: none !important;
 		margin-left: 10px;
 	}
-	.table-title .btn i {      <!--tamaño del + --->
+	.table-title .btn i {      <!-- tamaño del + --->
 		float: left;
 		font-size: 21px;
 		margin-right: 5px;
@@ -60,7 +62,7 @@
 		float: left;
 		margin-top: 2px;
 	}
-    table.table tr th, table.table tr td {    <!--espacio entre los productos-->
+    table.table tr th, table.table tr td {    <!-- espacio entre los productos-->
         border-color: #e9e9e9;
 		padding: 12px 15px;
 		vertical-align: middle;
@@ -257,9 +259,25 @@ $(document).ready(function(){
 	});
 });
 </script>
+
 <body style="background-color: #00D3BC;">
 </head>
 <body>
+  <script>
+
+	$('#button').click(function() {
+
+		 var doc = new jsPDF();
+
+		doc.setFontSize(15);
+
+		doc.text(15, 20, " Inventario ");
+    doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
+     doc.save('Inventario.pdf');
+
+
+	});
+</script>
     <div class="container">
         <div class="table-wrapper">
             <div class="table-title">
@@ -268,7 +286,7 @@ $(document).ready(function(){
 						<h2>Productos de la tienda</h2>   <!--subtitulo de la pagina-->
 					</div>
 					<div class="col-sm-6">
-<!--PDF-->  <a href="#PDF" class="btn btn-success" > <span>PDF</span></a>
+            <input type="button" class="btn btn-warning" id="button" value="Descargar Inventario"/>
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar</span></a>   <!--botones de eliminar y agregar-->
 						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
 					</div>
@@ -511,27 +529,10 @@ $(document).ready(function(){
 				</form>
 			</div>
 		</div>
+
 	</div>
-  <!--PDF-->
-  <div id="PDF">
-    <script>
-
-  	$('#btn btn-success').click(function() {
-
-  		 var doc = new jsPDF();
-
-  		doc.setFontSize(15);
-
-  		doc.text(15, 20, "Inventario");
-      doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
-       doc.save('Inventario.pdf');
-  	});
-  </script>
-  </div>
-
   <center>
   <button type="submit"><a href="vista.html">Regresar</a></button>
 </center>
-
 </body>
 </html>
