--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Gráfica de ventas.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/MVC/Views/Gráfica de ventas.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 <head>
 	<title></title>
@@ -14,7 +13,7 @@
 					data : [5, 10, 40, 12, 23, 80, 22, 8, 45, 50, 1, 55],
 					backgroundColor: ["#F7464A", "#46BFBD", "#FDB45C", "#949FB1", "#4D5360", "#A93226", "#F1948A", "#D7BDE2", "#BA4A00", "#48C9B0", "#9A7D0A", "#76448A"],
 				}],
-				labels : ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"]
+				labels : ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
 			},
 			options : {
 				responsive : true,
@@ -23,10 +22,6 @@
 
 		var canvas = document.getElementById('chart').getContext('2d');
 		window.pier = new Chart(canvas, datos);
-
-		function getRandom(){
-			return Math.round(Math.random() * 100);
-		}
 	});
 	</script>
 </head>
