--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa14.css
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa14.css
@@ -1,6 +1,6 @@
 
 body{
-  background-image: url(IMG/pista.png);
+  background-image: url(Hipodromo.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
