--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/programa14/Programa140.css
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/programa14/Programa140.css
@@ -1,5 +1,5 @@
 /*DOCTYPE css
-Nombre: Jesus Lira Romero
+Nombre: Voltar Mezquita
 Profesor: Melquizedec Moo Medina
 Programa: Programa14.css
           Hipodromos
