actualizacion del proyecto

--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Contraseña.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Contraseña.html
@@ -7,8 +7,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/estilos.css">
-    <body style="background-color: #00D3BC;">
-</body>
+    <body style="background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;">
+
 </head>
 
 <body class="text-center">
@@ -23,8 +23,8 @@
                 <p><input type="email" placeholder="Correo" required></p>       <!--ingresa su correo para que se le mande su usuario y contraseña-->
                 <p><input type="email" placeholder="Correo" required></p>
                 <p><input type="email" placeholder="Confirmar correo" required></p>
-                <button type="submit"><a href="Inicio.html">Enviar</a></button>
-                <button type="submit"><a href="Inicio.html">Regresar</a></button>
+                <input type="button" value="Enviar" onclick="location='Inicio.php'"/>
+                <input type="button" value="Volver" onclick="location='Inicio.php'"/>
             </form>
         </div>
 
@@ -33,6 +33,6 @@
     </div>
     <script src="JS/jquery-3.1.1.min.js"></script>
     <script src="JS/main.js"></script>
-
+</body>
 </body>
 </html>
