--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Gráfica de ventas.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Gráfica de ventas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ventas del año</title>
+	<title>Ventas</title>
         <script src="../../Librerías/dist/Chart.bundle.min.js" type="text/javascript"></script>
         <script src="../../Librerías/jquery-1.12.0.min.js" type="text/javascript"></script>
         <script type="text/javascript">
@@ -25,11 +25,11 @@
 	});
 	</script>
 </head>
-<body style="background-color: #00D3BC;">
+<body style="background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;"> <!--fondo de la pág-->
 	<!--El <canvas>elemento HTML se utiliza para dibujar gráficos sobre la marcha, a través de JavaScript.-->
 
 	<div id="canvas-container" style="width:50%;">
-		<canvas id="chart" width="500" height="350"></canvas>
+        <input type="button" value="Regresar a la vista principal" onclick="location='vista.php'"/>
 	</div>
 </body>
 </html>
