--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Inventario.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Inventario.html
@@ -15,24 +15,24 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style type="text/css">
     body {
-        color: #000000;    <!-- color de la captura de datos-->
-		background: #00D3BC;    <!-- del fondo de la pagina-->
+        color: #000000;  /*<!-- color de la captura de datos-->*/
+        background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover; /*<!-- del fondo de la pagina-->*/
 		font-family: 'Varela Round', sans-serif;
-		font-size: 13px;   <!-- tamaño de las letras de la cabeza-->
+		font-size: 13px; /*<!-- tamaño de las letras de la cabeza-->*/
 	}
 	.table-wrapper {
         background: #fff;
-        padding: 20px 25px; <!-- Tamaño del titulo la tabla-->
+        padding: 20px 25px; /*<!-- Tamaño del titulo la tabla-->*/
         margin: 30px 0;
 		border-radius: 3px;
         box-shadow: 0 1px 1px rgba(0,0,0,.05);
     }
-	.table-title {       <!-- tamaño del cuadro princiapal-->
+	.table-title {   /*<!-- tamaño del cuadro princiapal-->*/
 		padding-bottom: 15px;
-		background: #00D3BC;
-		color: #fff;  <!-- color del titulo del cuadro-->
+		background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;
+		color: #fff;  /*<!-- color del titulo del cuadro-->*/
 		padding: 160px 30px;
-		margin: -20px -25px 10px;  <!-- ancho del cuadro-->
+		margin: -20px -25px 10px;  /*<!-- ancho del cuadro-->*/
 		border-radius: 3px 3px 0 0;
     }
     .table-title h2 {
@@ -42,7 +42,7 @@
 	.table-title .btn-group {
 		float: right;
 	}
-	.table-title .btn {   <!-- tamaño del cuadro de agregar y eliminar-->
+	.table-title .btn {   /*<!-- tamaño del cuadro de agregar y eliminar-->*/
 		color: #fff;
 		float: right;
 		font-size: 13px;
@@ -53,7 +53,7 @@
 		outline: none !important;
 		margin-left: 10px;
 	}
-	.table-title .btn i {      <!-- tamaño del + --->
+	.table-title .btn i {    /*<!-- tamaño del + --->*/
 		float: left;
 		font-size: 21px;
 		margin-right: 5px;
@@ -62,7 +62,7 @@
 		float: left;
 		margin-top: 2px;
 	}
-    table.table tr th, table.table tr td {    <!-- espacio entre los productos-->
+    table.table tr th, table.table tr td {   /*<!-- espacio entre los productos-->*/
         border-color: #e9e9e9;
 		padding: 12px 15px;
 		vertical-align: middle;
@@ -260,7 +260,8 @@ $(document).ready(function(){
 });
 </script>
 
-<body style="background-color: #00D3BC;">
+
+<body style="background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;">
 </head>
 <body>
   <script>
@@ -286,6 +287,7 @@ $(document).ready(function(){
 						<h2>Productos de la tienda</h2>   <!--subtitulo de la pagina-->
 					</div>
 					<div class="col-sm-6">
+						<button type="button" name="button" onclick="linea()">Generar PDF.</button>
             <input type="button" class="btn btn-warning" id="button" value="Descargar Inventario"/>
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar</span></a>   <!--botones de eliminar y agregar-->
 						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
@@ -414,6 +416,9 @@ $(document).ready(function(){
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
                     <li class="page-item"><a href="#" class="page-link">Siguiente</a></li>
                 </ul>
+                <center>
+                <input type="button" value="Regresar" onclick="location='vista.php'"/>
+                </center>
             </div>
         </div>
     </div>
@@ -423,7 +428,7 @@ $(document).ready(function(){
 			<div class="modal-content">
 				<form>
 					<div class="modal-header">
-						<h4 class="modal-title">Agregr produccto</h4>
+						<h4 class="modal-title">Agregar producto</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">
@@ -529,10 +534,7 @@ $(document).ready(function(){
 				</form>
 			</div>
 		</div>
-
+		<input type="button" value="Regresar" onclick="location='vista.php'"/>
 	</div>
-  <center>
-  <button type="submit"><a href="vista.html">Regresar</a></button>
-</center>
 </body>
 </html>
