--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Ventas.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Ventas.html
@@ -13,22 +13,22 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <style type="text/css">
             body {
-                color: #000000;    //<!--color de la captura de datos-->
-                background: #00D3BC;    //<!--del fondo de la pagina-->
+                color: #000000;    /*<!--color de la captura de datos-->*/
+                background: #00D3BC;    /*<!--del fondo de la pagina-->*/
                 font-family: 'Varela Round', sans-serif;
-                font-size: 13px;    //<!--tamaño de las letras de la cabeza-->
+                font-size: 13px;    /*<!--tamaño de las letras de la cabeza-->*/
             }
             .table-wrapper {
                 background: #fff;
-                padding: 20px 25px; //<!--Tamaño del titulo la tabla-->
+                padding: 20px 25px; /*<!--Tamaño del titulo la tabla-->*/
                 margin: 30px 0;
                 border-radius: 3px;
                 box-shadow: 0 1px 1px rgba(0,0,0,.05);
             }
-            .table-title {       //<!--tamaño del cuadro princiapal-->
+            .table-title {       /*<!--tamaño del cuadro principal-->*/
                                  padding-bottom: 15px;
-                                 background: #00D3BC;
-                                 color: #fff;  //<!--color del titulo del cuadro-->
+                                 background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;
+                                 color: #fff;  /*<!--color del titulo del cuadro-->*/
                                  padding: 160px 30px;
                                  margin: -20px -25px 10px;  //<!--ancho del cuadro-->
                                  border-radius: 3px 3px 0 0;
@@ -40,7 +40,7 @@
             .table-title .btn-group {
                 float: right;
             }
-            .table-title .btn {   //<!--tamaño del cuadro de agregar y eliminar-->
+            .table-title .btn {   /*<!--tamaño del cuadro de agregar y eliminar-->*/
                                   color: #fff;
                                   float: right;
                                   font-size: 13px;
@@ -51,7 +51,7 @@
                                   outline: none !important;
                                   margin-left: 10px;
             }
-            .table-title .btn i {      //<!--tamaño del + --->
+            .table-title .btn i {      /*<!--tamaño del + --->*/
                                        float: left;
                                        font-size: 21px;
                                        margin-right: 5px;
@@ -60,7 +60,7 @@
                 float: left;
                 margin-top: 2px;
             }
-            table.table tr th, table.table tr td {    //<!--espacio entre los productos-->
+            table.table tr th, table.table tr td {    /*<!--espacio entre los productos-->*/
                                                       border-color: #e9e9e9;
                                                       padding: 12px 15px;
                                                       vertical-align: middle;
@@ -257,7 +257,7 @@
                 });
             });
         </script>
-    <body style="background-color: #00D3BC;">
+    <body style="background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;"> <!--fondo de la Pág-->
     </head>
 <body>
     <div class="container">
@@ -420,13 +420,14 @@
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
                     <li class="page-item"><a href="#" class="page-link">Siguiente</a></li>
                 </ul>
+                <center>
+                <input type="button" value="Regresar" onclick="location='vista.php'"/>
+                <input type="button" value="Grafica de ventas del año" onclick="location='Gráfica de ventas.html'"/>
+                </center>
             </div>
         </div>
-        <button type="submit"><a href="vista.html"></a>Regresar</a></button>
-        <button type="submit"><a href="Gráfica de ventas.html">Grafica de ventas del año</a></button>
         <script src="JS/jquery-3.1.1.min.js"></script>
         <script src="JS/main.js"></script>
 </body>
 </div>
-
 </html>
