--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Inventario.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Inventario.html
@@ -273,10 +273,8 @@ $(document).ready(function(){
 		doc.setFontSize(15);
 
 		doc.text(15, 20, " Inventario ");
-    doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
+    doc.text('Inventario: \r Nombre    Existencia fisica     \r Lappiz________________________\rBorrador________________________\rCocaCola________________________.',150,120,'center');
      doc.save('Inventario.pdf');
-
-
 	});
 </script>
     <div class="container">
@@ -287,7 +285,7 @@ $(document).ready(function(){
 						<h2>Productos de la tienda</h2>   <!--subtitulo de la pagina-->
 					</div>
 					<div class="col-sm-6">
-						<button type="button" name="button" onclick="linea()">Generar PDF.</button>
+						<button type="button" name="button" onclick="Inventario()">Generar PDF</button>
             <input type="button" class="btn btn-warning" id="button" value="Descargar Inventario"/>
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar</span></a>   <!--botones de eliminar y agregar-->
 						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
