--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Inventario.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Inventario.html
@@ -285,8 +285,7 @@ $(document).ready(function(){
 						<h2>Productos de la tienda</h2>   <!--subtitulo de la pagina-->
 					</div>
 					<div class="col-sm-6">
-						<button type="button" name="button" onclick="Inventario()">Generar PDF</button>
-            <input type="button" class="btn btn-warning" id="button" value="Descargar Inventario"/>
+            <input type="button" name="button" onclick="Inventario()" class="btn btn-warning" id="button" value="Descargar Inventario"/>
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Agregar</span></a>   <!--botones de eliminar y agregar-->
 						<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Eliminar</span></a>
 					</div>
