--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Ventas.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Proyecto/MVC/Views/Ventas.html
@@ -14,7 +14,7 @@
         <style type="text/css">
             body {
                 color: #000000;    /*<!--color de la captura de datos-->*/
-                background: #00D3BC;    /*<!--del fondo de la pagina-->*/
+                background-image:url('../img/dobla-papeles.jpg'); -webkit-background-size: cover;/*del fondo de la pagina*/
                 font-family: 'Varela Round', sans-serif;
                 font-size: 13px;    /*<!--tamaño de las letras de la cabeza-->*/
             }
